--- a/dropdown-issue/src/app/pages/dashboard/dashboard.component.html
+++ b/dropdown-issue/src/app/pages/dashboard/dashboard.component.html
@@ -39,40 +39,34 @@
           <mdb-accordion [multiple]="false" aria-multiselectable="false">
 
             <!-- Collapsible link -->
-            <mdb-accordion-item>
-              <mdb-accordion-item-head mdbWavesEffect><mdb-icon fas icon="chevron-right"></mdb-icon> Collapsible menu
+            <mdb-accordion-item *ngFor="let category of [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]">
+              <mdb-accordion-item-head mdbWavesEffect><mdb-icon fas icon="chevron-right"></mdb-icon> {{category}}
               </mdb-accordion-item-head>
               <mdb-accordion-item-body>
                 <ul>
-                  <li><a href="#" mdbWavesEffect>Link 1</a></li>
-                  <li><a href="#" mdbWavesEffect>Link 2</a></li>
+                  <li><a href="#" mdbWavesEffect *ngFor="let j of [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]">Link {{j}}</a></li>
                 </ul>
               </mdb-accordion-item-body>
             </mdb-accordion-item>
-
-            <!-- Simple link -->
-            <mdb-accordion-item class="no-collase">
-              <mdb-accordion-item-head mdbWavesEffect><mdb-icon far icon="hand-pointer"></mdb-icon> Simple link
-              </mdb-accordion-item-head>
-              <mdb-accordion-item-body></mdb-accordion-item-body>
-            </mdb-accordion-item>
-
             <!-- Collapsible link -->
-            <mdb-accordion-item>
-              <mdb-accordion-item-head mdbWavesEffect><mdb-icon far icon="eye"></mdb-icon> Collapsible menu 2
+            <mdb-accordion-item *ngFor="let category of [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]">
+              <mdb-accordion-item-head mdbWavesEffect><mdb-icon fas icon="chevron-right"></mdb-icon> {{category}}
               </mdb-accordion-item-head>
               <mdb-accordion-item-body>
                 <ul>
-                  <li><a href="#" mdbWavesEffect>Link 1</a></li>
-                  <li><a href="#" mdbWavesEffect>Link 2</a></li>
+                  <li><a href="#" mdbWavesEffect *ngFor="let j of [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]">Link {{j}}</a></li>
                 </ul>
               </mdb-accordion-item-body>
             </mdb-accordion-item>
-
-            <!-- Simple link -->
-            <mdb-accordion-item class="no-collase">
-              <mdb-accordion-item-head mdbWavesEffect><mdb-icon far icon="gem"></mdb-icon> Simple link 2</mdb-accordion-item-head>
-              <mdb-accordion-item-body></mdb-accordion-item-body>
+            <!-- Collapsible link -->
+            <mdb-accordion-item *ngFor="let category of [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]">
+              <mdb-accordion-item-head mdbWavesEffect><mdb-icon fas icon="chevron-right"></mdb-icon> {{category}}
+              </mdb-accordion-item-head>
+              <mdb-accordion-item-body>
+                <ul>
+                  <li><a href="#" mdbWavesEffect *ngFor="let j of [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]">Link {{j}}</a></li>
+                </ul>
+              </mdb-accordion-item-body>
             </mdb-accordion-item>
 
           </mdb-accordion>
